<?xml version="1.0" encoding="UTF-8" ?>

<resources>
  <string name="accountAdd">Add Library</string>
  <string name="accountAgeVerification">Age Verification</string>
  <string name="accountCOPPADeleteBooks">Delete books?</string>
  <string name="accountCOPPADeleteBooksConfirm">Changing your age will remove all books downloaded from the current account.</string>
  <string name="accountCancel">Cancel</string>
  <string name="accountCardCreatorDialogCancel">Cancel</string>
  <string name="accountCardCreatorDialogOpenSettings">Open Settings</string>
  <string name="accountCardCreatorDialogOpenSettingsMessage">The Palace App requires a one-time location check to create a virtual library card. Your location is currently not shared. To enable location access for the Palace App, please adjust your location settings.</string>
  <string name="accountCardCreatorDialogPermissionsMessage">To create your virtual library card, the Palace App will use your location one time to verify your library service area. Click \"OK\" to proceed.</string>
  <string name="accountCardCreatorLabel">Don\'t have a library card?</string>
  <string name="accountCardCreatorLocationFailed">There was an error retrieving your location.</string>
  <string name="accountCardCreatorSignUp">Create Card</string>
  <string name="accountCardCreatorSignUpMessage">The Palace App will use your location one time to verify your library service area.</string>
  <string name="accountCreateCard">Create Card</string>
  <string name="accountCreation">Library Account Creation</string>
  <string name="accountCreationFailed">Library creation failed</string>
  <string name="accountCreationFailedMessage">The library could not be created.</string>
  <string name="accountCustomOPDS">Custom OPDS Feed URL</string>
  <string name="accountDelete">Remove</string>
  <string name="accountEULA">End User License Agreement</string>
  <string name="accountEULAStatement">By signing in, you agree to the End User License Agreement.</string>
  <string name="accountForgotPassword">Forgot your password?</string>
  <string name="accountGoBack">Go Back</string>
  <string name="accountLicenses">Content Licenses</string>
  <string name="accountLogin">Sign in</string>
  <string name="accountLoginAlternatives">Alternative Login Methods</string>
  <string name="accountLoginRequired">Please sign in to continue.</string>
  <string name="accountLoginRequiredSessionExpired">Your session has expired. Please log in to refresh your session.</string>
  <string name="accountLoginRequiredSessionExpiredMultiline">Your session has expired.\nPlease log in to refresh your session.</string>
  <string name="accountLoginWith">Sign in with %1$s</string>
  <string name="accountLogout">Sign out</string>
  <string name="accountMenuRefresh">Reload</string>
  <string name="accountMenuSearch">Search</string>
  <string name="accountMore">More options</string>
  <string name="accountPassword">Password</string>
  <string name="accountPasswordResetFailed">Sorry, we weren\'t able to find a usable app to reset your password. Please send email to %1$s if you need to report an issue.</string>
  <string name="accountPasswordShow">Show %1$s</string>
  <string name="accountPickerTitle">Find Your Library</string>
  <string name="accountPlaceholder">Lorem ipsum dolor sit amet, probatus volutpat has at, vis adhuc iuvaret omittantur an, sadipscing conclusionemque his ad. Eam ut simul tempor. Primis consetetur appellantur vim eu, eum an iudico dolorum. Ad vis utamur honestatis, sanctus debitis referrentur an eam.</string>
  <string name="accountPrivacyPolicy">Privacy Policy</string>
  <string name="accountRegistryCreating">Creating a library…</string>
  <string name="accountRegistryEmpty">No libraries are available.</string>
  <string name="accountRegistryNoLocation">You can search for your library by name, branch location, or your own location.</string>
  <string name="accountRegistryRefresh">Refresh</string>
  <string name="accountRegistryRetrieving">Retrieving libraries from the registry…</string>
  <string name="accountRegistrySelect">Please select a library…</string>
  <string name="accountReportFailed">Sorry, we weren\'t able to find a usable app to contact support. Please send email to %1$s if you need to report an issue.</string>
  <string name="accountReportIssue">Report an issue…</string>
  <string name="accountSAML20LoginLabel">Sign in with SAML 2.0 WEB SSO</string>
  <string name="accountSAML20NoAccessToken">Failed to retrieve an access token from the URI: %1$s</string>
  <string name="accountSAML20NoPatronInfo">Failed to retrieve patron info from the URI: %1$s</string>
  <string name="accountSearchHint">Search accounts&#8230;</string>
  <string name="accountSyncBookmarks">Sync bookmarks</string>
  <string name="accountUserName">User Name</string>
  <string name="accountWantChildCard">Want a card for your child?</string>
  <string name="accounts">Libraries</string>
  <string name="accountsDelete">@string/accountDelete</string>
  <string name="accountsDeleteConfirm">Are you sure you want to remove \"%1$s\" from this device?</string>
  <string name="accountsDeleteConfirmTitle">Remove library</string>
  <string name="accountsDeletionFailed">Library removal failed</string>
  <string name="accountsDeletionFailedMessage">The library could not be removed.</string>
  <string name="accountsDetails">Library Details</string>
  <string name="currentlyBrowsing">You\'re currently browsing</string>

  <string name="tabBooks">My Books</string>
  <string name="tabCatalog">Catalog</string>
  <string name="tabHolds">Reservations</string>
  <string name="tabProfile">Profile</string>
  <string name="tabSettings">Settings</string>

  <!-- EULA strings -->
  <string name="eula_disagree">Disagree</string>
  <string name="eula_agree">Agree</string>

  <!-- Migration strings -->
  <string name="migrationFailure">There were one or more problems migrating your data&#8230;</string>
  <string name="migrationSuccess">Your data was migrated successfully!</string>
  <string name="migrationSendReport">Send Report</string>
  <string name="migrationOK">OK</string>

  <!-- Library selection screen strings -->
  <string name="selectionTitle">Read E-Books from Your Library</string>
  <string name="selectionButton">Find Your Library</string>
  <string name="selectionAlternateButton">Add a Library Later</string>

  <!-- Tutorial Accessibility -->
  <string name="contentDescriptionTutorialPage">Tutorial page</string>
  <string name="contentDescriptionSkipButton">Skip button</string>
  <string name="contentDescriptionStep1">Step 1 - Find your library</string>
  <string name="contentDescriptionStep2">Step 2 - Can\'t find your library? Go to the Palace Bookshelf for more than 10000 free titles that you can enjoy now</string>
  <string name="contentDescriptionStep3">Step 3 - Read. Listen. Enjoy!</string>
</resources>
