<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/authBasicToken"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/authBasicTokenUserLabel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/accountUserName"
    android:visibility="gone"
    tools:visibility="visible">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/authBasicTokenUserField"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:autofillHints="username"
      android:inputType="text" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/authBasicTokenPassLabel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:hint="@string/accountPassword"
    android:visibility="gone"
    tools:visibility="visible">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/authBasicTokenPassField"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:autofillHints="password"
      android:imeOptions="actionDone"
      android:inputType="textPassword" />
  </com.google.android.material.textfield.TextInputLayout>

  <CheckBox
    android:id="@+id/authBasicTokenShowPass"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:text="@string/accountPasswordShow"
    android:visibility="gone"
    tools:text="Show password"
    tools:visibility="visible" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <Button
            android:id="@+id/authBasicTokenLogin"
            android:layout_width="0dp"
            android:layout_height="@dimen/accountLoginLogoutButtonHeight"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/accountLogin"
            android:text="@string/accountLogin"
            app:layout_constraintWidth_max="@dimen/accountLoginLogoutButtonMaximumWidth"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@id/authBasicTokenLogout"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_goneMarginEnd="0dp" />

        <Button
            android:id="@+id/authBasicTokenLogout"
            android:layout_width="0dp"
            android:layout_height="@dimen/accountLoginLogoutButtonHeight"
            android:contentDescription="@string/accountLogout"
            android:text="@string/accountLogout"
            app:layout_constraintWidth_max="@dimen/accountLoginLogoutButtonMaximumWidth"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/authBasicTokenLogin"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

  <TextView
      android:id="@+id/resetPasswordLabel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginBottom="8dp"
      android:padding="8dp"
      android:text="@string/accountForgotPassword" />

</LinearLayout>
